api creation for blog

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.2",
     "cloudinary": "^2.2.0",
     "cloudinary-react": "^1.8.1",
+    "dotenv": "^16.4.5",
     "faker": "5.5.3",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
